# springrts

./: .gitignore  .travis.yml  AIClasses.cpp  AIClasses.hpp  AttackGroup.cpp  AttackHandler.cpp  BuildUp.cpp  CMakeLists.txt  CommandTracker.cpp  CommandTracker.h  DGunController.cpp  DefenseMatrix.cpp  EconomyTracker.cpp  KAIK.cpp  KAIK.h  Logger.cpp  Logger.h  MetalMaker.cpp  MetalMap.cpp  MicroPather.cpp  PathFinder.cpp  README.md  Unit.cpp  Unit.h  UnitHandler.cpp  UnitTable.cpp  decompiler.cpp  springrts-103.0-alt-linking.patch  springrts-alt-gcc8.patch  springrts-alt-unbundle-libs.patch  springrts.spec  taspring.spec
.gear/: rules  springrts-0.81.2.1-alt-DSO.patch  springrts-0.81.2.1-alt-gcc4.6.patch  springrts-0.81.2.1-alt-glibc.patch  springrts-alt-dont-use-gold-linker.patch  springrts-alt-gcc10.patch  springrts-alt-gcc11-compat.patch  springrts-alt-linking.patch  springrts-alt-unbundle-libs-pr-downloader.patch  springrts-alt-unbundle-libs.patch  springrts.spec  update-submodules.sh
.gear/tags/: list
AI/Interfaces/C/: CMakeLists.txt
AI/Skirmish/NTai/AI/NTai/Helpers/: CWorkerThread.h
installer/: make_source_package.sh
installer/freedesktop/applications/: spring.desktop
rts/Lua/: LuaHashString.h
rts/Rendering/: GLContext.h
rts/System/: CRC.h  SpringHashMap.hpp  SpringHashSet.hpp  StringUtil.h
rts/System/Platform/: Misc.h
rts/System/Sync/: FPUCheck.cpp
rts/System/creg/: STL_Pair.h
rts/builds/dedicated/: CMakeLists.txt
rts/builds/default/: CMakeLists.txt
rts/builds/multithreaded/: CMakeLists.txt
rts/lib/assimp/: CMakeLists.txt
rts/lib/assimp/code/: CMakeLists.txt
rts/lib/headlessStubs/: CMakeLists.txt
rts/lib/luasocket/src/: restrictions.cpp
rts/lib/streflop/: FPUSettings.h  SMath.cpp
rts/lib/streflop/libm/flt-32/: e_exp2f.cpp  s_nearbyintf.cpp
spring/AI/Skirmish/HughAI/src-ai/hughai/ui/: ConsoleEcma.java
spring/AI/Skirmish/KAIK/: .gitignore  AIClasses.cpp  KAIK.cpp  Logger.cpp  LuaParser.cpp  MetalMap.cpp  MicroPather.cpp  UnitTable.cpp
spring/rts/Rendering/: glFont.cpp
spring/rts/System/: MemPool.h  myMath.h
spring/rts/builds/headless/: CMakeLists.txt
src/: CRC.cpp  CRC.h  Image.cpp  Image.h  SMFMap.cpp  SMFMap.h  TileStorage.cpp  TileStorage.h  decompiler.cpp  main.cpp  mapcompile.cpp
src-ai/hughai/ui/: ConsoleJava.java
src-ai/hughai/unitdata/: StartPosition.java  UnitController.java  UnitDefHelp.java
src/API/spring/: SpringUnit.cpp
tools/unitsync/: CMakeLists.txt  unitsync.cpp
